# pyltp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  configure  setup.py
.github/: ISSUE_TEMPLATE.md
.travis/: install.sh
boost_python/: CMakeLists.txt
boost_python/include/boost/math/special_functions/: erf.hpp
boost_python/include/boost/math/special_functions/detail/: lgamma_small.hpp
doc/: Makefile  api.rst  changelog.rst  conf.py  index.rst  install.rst  intro.rst  make.bat
example/: example.py  ltp.cnf
ltp_data/: cws.model  ner.model  parser.model  pos.model
ltp_data/srl/: prg.model  srl.model
src/: CMakeLists.txt  pyltp.cpp
